# Refraction

./: .gitignore  ARCHITECTURE.md  ASHWIN.todo  ASHWIN_TODO.md  AppIcon.icns  CLAUDE.md  CLAUDE_PRISM_HANDOFF.md  HUMAN_REVIEW_TODO.md  README.md  README.txt  STATS_FIXES.md  STATS_TEST_PLAN.md  SWIFT_UI.md  build_app.sh  build_standalone.sh  claude_plotter.spec  dump.sh  dump.sh.save  generate_icon.py  generate_refraction_logos.py  generate_spectra_logos.py  plotter_app_collect.py  plotter_app_execution.py  plotter_app_file_io.py  plotter_app_icons.py  plotter_app_wiki.py  plotter_barplot_app.py  plotter_chart_helpers.py  plotter_comparisons.py  plotter_desktop.py  plotter_errors.py  plotter_events.py  plotter_export.py  plotter_functions.py  plotter_import_pzfx.py  plotter_plotly_theme.py  plotter_presets.py  plotter_project.py  plotter_registry.py  plotter_results.py  (+63 more)
.claude/: settings.json
.claude/hooks/: update_docs.py
.claude/skills/: add-chart.md  fix-tests.md  review-pr.md  test-and-commit.md  wire-chart.md
.github/workflows/: ci.yml  release.yml
RefractionApp/: project.yml
RefractionApp/Refraction/: Info.plist
RefractionApp/Refraction/App/: AppState.swift  RefractionApp.swift
RefractionApp/Refraction/Models/: ChartConfig.swift  ChartSpec.swift  ChartType.swift  DataTable.swift  Experiment.swift  FormatGraphSettings.swift  ProjectState.swift  RenderStyle.swift
RefractionApp/Refraction/Renderers/: AxisRenderer.swift  BarRenderer.swift  BracketRenderer.swift
RefractionApp/Refraction/Resources/: DocumentIcon.icns
RefractionApp/Refraction/Services/: APIClient.swift  DebugLog.swift  PythonServer.swift
RefractionApp/Refraction/Views/: ContentView.swift  DebugConsoleView.swift  ErrorView.swift  LaTeXView.swift  (+2 more)
assets/: AppIcon.icns
debug.refract/: project.json
debug.refract/data/: 00384C91-D260-4D2C-B0BA-1A74A231FDB5.json  61591459-6565-4C1A-B748-4215D06A9FF0.json  7D328EF6-21B0-480B-A412-15DFC09752EE.json  879AE5E3-482D-41D2-9782-D8A02E8F2DBF.json  87B5AC9A-2E84-49B5-A273-F49ADAEBF759.json  9179D2BC-70A6-43AD-A4B7-96E5B57C8D8E.json  94177624-1AC6-44B6-8145-73E82B20D057.json  95AEB506-4CF0-4E40-9056-1F50C9B7365E.json  A79E4D45-60F9-40DF-9E23-A8E626D3FB33.json  AF49F9B5-404C-447E-AEFE-03226A92CBB8.json  B17DD20A-A711-4F0C-AA40-DB57499A0440.json  B804F769-F309-4AC6-9BAB-9B99EE99A599.json  E0CF56AA-C076-49B6-B71E-F5E9F2707E93.json  FFE65A20-1ADC-4BF5-ADFD-19EDB194A4A3.json
docs/: ADDING_CHARTS.md  ARCHITECTURE.md  PHASE1_TABS.md  PLAN.md  TESTING.md  mockup.html
phase2/: KNOWN_ISSUES.txt  PHASE2_SUMMARY.md  duplicate_check.txt  rename_first.sh  test_results.txt  wiki_check.txt
plotter_web/src/: App.css  App.tsx  PlotterChart.tsx  index.css
refraction/analysis/: __init__.py  bar.py  before_after.py  bland_altman.py  box.py  chi_square_gof.py  contingency.py  curve_fit.py  curve_models.py  dot_plot.py  engine.py  forest_plot.py  grouped_bar.py  helpers.py  histogram.py  kaplan_meier.py  layout.py  line.py  raincloud.py  results.py  scatter.py  schema.py  stats_annotator.py  transforms.py  two_way_anova.py  violin.py  xy.py
refraction/app/: main.py
refraction/core/: chart_helpers.py  config.py  errors.py  outliers.py  registry.py  stats.py  types.py  validators.py
refraction/io/: export.py  project_v2.py
refraction/server/: api.py
refraction/specs/: bar.py  column_stats.py  lollipop.py  repeated_measures.py
scripts/: build_app.sh  generate_debug_refract.py  run_app.sh
tests/: conftest.py  plotter_test_harness.py  test_analysis.py  test_api.py  test_api_integration.py  test_canvas_renderer.py  test_comprehensive.py  test_control.py  test_deficiency_fixes.py  test_edge_cases.py  test_invariants.py  test_modular.py  test_p1_p2_p3.py  test_phase2_infra.py  test_phase3_plotly.py  test_phase6_qa.py  test_png_render.py  test_spec_correctness.py  test_stats.py  test_stats_exhaustive.py  test_validators.py  visual_test.py
tests/engine/: test_curve_models.py  test_helpers.py  test_layout.py  test_project_v2.py  test_results.py  test_stats_core.py  test_transforms.py  test_validators.py
tests/integration/: test_api.py  test_pipeline.py
(+102 files in other folders)
